keystore gradle config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,10 +11,21 @@ android {
         versionCode 1
         versionName "1.0"
     }
+
+    signingConfigs {
+        release {
+            storeFile file("../xbo_release.jks")
+            storePassword "symbol148902142"
+            keyAlias "xbo"
+            keyPassword "symbol148902142"
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
 }
